attempting to fix the pages by manual routing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				computation. 
 			</p>
 			<p>
-				Read my <a href="/blog/design_justice">first blog post</a>, which is about exploring the
+				Read my <a href="/codes/blog/design_justice">first blog post</a>, which is about exploring the
 				parallels between trans studies' investments in normativity and prediction algorithms
 				in machine learning.
 			</p>
