--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/about.astro';
 	title="About Me"
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('October 23, 2024')}
-	heroImage="/prof_fence.jpg"
+	heroImage="/codes/prof_fence.jpg"
 >
 	<p>
 		Hello! I am Filipa Calado, an <a href='https://www.pratt.edu/people/filipa-calado/'>Assistant 
